# portabellas

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AGENT_REWRITE.md  BUGS.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml  pr.yml  release.yml
.opencode/commands/: create-bug.md  create-feature.md  create-issue.md  create-pr.md  do-issue.md  edit-issue.md  refine-issue.md
.opencode/skills/api-design/: SKILL.md
.opencode/skills/architecture/: SKILL.md
.opencode/skills/docs/: SKILL.md
.opencode/skills/gh-cli/: SKILL.md
.opencode/skills/style/: SKILL.md
.opencode/skills/testing/: SKILL.md
.opencode/skills/type-inference-and-validation/: SKILL.md
.opencode/skills/type-inference-testing/: SKILL.md
docs/: README.md
docs/examples/: plotting.ipynb
docs/reference/: generate_reference_pages.py
planning/: todo.md  type_checking.md
planning/discrepancy/: 01_table.md  02_column.md  03_cell_row.md  04_string_namespace.md  05_datetime_duration_namespace.md  06_math_namespace.md  07_list_struct_namespace.md  08_datatypes.md  09_io.md  10_other.md
planning/polars_overview/: 09_io.md  10_groupby.md  12_schema_config_misc.md
planning/portabellas_overview/: 00_overview.md  01_table.md  03_row_cell.md  06_io.md
polars_overview/: 00_overview.md  01_dataframe.md  02_lazyframe.md  03_series.md  04_expr.md  05_datatypes.md  06_expr_namespaces.md  07_series_namespaces.md  08_functions.md  11_when_then.md
portabellas_overview/: 01_table.md  02_column.md  04_cell_namespaces.md  05_datatypes.md  07_plotting.md  08_exceptions.md  09_validation_config_utils.md
src/portabellas/: __init__.py
src/portabellas/_utils/: __init__.py  _collections.py  _lazy.py
src/portabellas/_validation/: __init__.py  _cell_type_requirements.py  _check_bounds.py  _check_cell_type.py  _check_column_has_no_missing_values.py  _check_column_has_no_nulls.py  _check_column_is_numeric.py  _check_columns_are_numeric.py  _check_columns_are_permutation.py  _check_columns_dont_exist.py  _check_columns_exist.py  _check_datetime_format.py  _check_row_counts_are_equal.py  _check_schema.py  _check_struct_field_exists.py  _check_type.py  _normalize_and_check_file_path.py
src/portabellas/containers/: _column.py  _table.py
src/portabellas/debugging/: __init__.py  _query_analyzer.py
src/portabellas/exceptions/: __init__.py
src/portabellas/io/: _table_reader.py  _table_writer.py
src/portabellas/plotting/: __init__.py  _axis_config.py  _column_plotter.py  _plot.py  _plot_config.py  _plot_writer.py  _plotting_utils.py  _table_plotter.py
src/portabellas/query/: __init__.py  _sql_context.py
src/portabellas/typing/: __init__.py  _data_type.py  _infer_type_from_literal.py  _polars_data_type.py  _schema.py  _type_inference.py
tests/: conftest.py
tests/helpers/: __init__.py  _assertions.py  _factories.py  _plot_assertions.py  _resources.py
tests/portabellas/_validation/: test_check_bounds.py  test_check_cell_type.py  test_check_columns_are_numeric.py  test_check_columns_dont_exist.py  test_check_columns_exist.py  test_check_type.py  test_normalize_and_check_file_path.py
tests/portabellas/debugging/: test_query_analyzer.py
tests/portabellas/plotting/: test_plot.py
tests/portabellas/query/: test_sql_context.py
tests/resources/jsonl/: non-empty.jsonl  special-character.jsonl
tests/resources/parquet/: non-empty.parquet  special-character.parquet
(+343 files in other folders)
