[project]
name = "portabellas"
version = "0.1.0"
description = "An easy way to work with tabular data."
authors = [
    {name = "Lars Reimann", email = "mail@larsreimann.com"}
]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/portabellas"
requires-python = ">=3.12,<3.14"
dependencies = [
    "polars>=1.39.3",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.7",
    "syrupy>=4.9.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.16",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
disallow_any_generics = false
disallow_untyped_decorators = false
no_warn_return_any = true

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--snapshot-warn-unused",
    "--strict-markers",
    "--tb=short", # short tracebacks
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812", # Conflicts with formatter
    "D100",
    "D104",
    "PLR09",
    "PLR2004",
    "PLW0108",
    "SLF001", # We don't want to expose our entire API
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D103",
    "FBT001",
    "INP001",
    "S101",
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"
