[project]
name = "portabellas"
version = "0.1.0"
description = "An easy way to work with tabular data."
authors = [
    {name = "Lars Reimann", email = "mail@larsreimann.com"}
]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/portabellas"
requires-python = ">=3.13,<3.15"
dependencies = [
    "polars>=1.40.0",
    "tzdata>=2026.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "syrupy>=4.9.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
disallow_any_generics = false
disallow_untyped_decorators = false
no_warn_return_any = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--snapshot-warn-unused",
    "--strict-markers",
    "--tb=short", # short tracebacks
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812", # Conflicts with formatter
    "D100",
    "D104",
    "ERA001",
    "PLR09",
    "PLR2004",
    "PLW0108",
    "RET505",
    "SLF001", # We don't want to expose our entire API
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D101",
    "D102",
    "D103",
    "FBT001",
    "INP001",
    "S101",
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"
